--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@ionic-native/background-mode": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/media": "^4.7.0",
+    "@ionic-native/native-audio": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
@@ -33,6 +35,7 @@
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-media": "^5.0.2",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
@@ -40,7 +43,8 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-plugin-background-mode": "~0.7.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
@@ -56,7 +60,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-media": {
         "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
-      }
+      },
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "ios",
