--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
     "@ionic-native/media": "^4.7.0",
     "@ionic-native/native-audio": "^4.9.0",
     "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/status-bar": "4.7.0",
+    "@ionic-native/status-bar": "^4.7.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "~7.0.0",
+    "cordova-android": "7.0.0",
     "cordova-ios": "~4.5.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-media": "^5.0.2",
+    "cordova-plugin-nativeaudio": "~3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionic-simple-lockscreen": "0.0.4",
@@ -59,7 +61,8 @@
       "cordova-plugin-media": {
         "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
       },
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-nativeaudio": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "ios",
