--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/background-mode": "^4.7.0",
+    "@ionic-native/background-mode": "^4.9.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/media": "^4.7.0",
     "@ionic-native/native-audio": "^4.9.0",
@@ -30,6 +30,7 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-background-mode": "git+https://github.com/katzer/cordova-plugin-background-mode.git",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -62,7 +63,8 @@
         "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
       },
       "cordova-plugin-nativeaudio": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "ios",
